[package]
name = "ast"
version.workspace = true
authors = ["Yorick Peterse <yorick@yorickpeterse.com>"]
edition = "2021"
license = "MPL-2.0"
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
unicode-segmentation = "^1.8"
getopts = "^0.2"
location = { path = "../location" }

[dev-dependencies]
similar-asserts = "^1.1"
