[package]
name = "ast"
version.workspace = true
authors = ["Yorick Peterse <yorick@yorickpeterse.com>"]
edition = "2021"
license = "MPL-2.0"
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
unicode-segmentation = { workspace = true }
location = { workspace = true }

[dev-dependencies]
similar-asserts = { workspace = true }
