[package]
name = "inko"
version = "0.9.0" # VERSION
authors = ["Yorick Peterse <yorick@yorickpeterse.com>"]
edition = "2018"
license = "MPL-2.0"

[lib]
doctest = false

[features]
default = []
jemalloc = ["jemallocator"]
libffi-system = ["libinko/libffi-system"]

[dependencies]
getopts = "^0.2"
jemallocator = { version = "^0.3", optional = true }
libinko = { path = "../vm" }
