[package]
name = "compiler"
version.workspace = true
authors = ["Yorick Peterse <yorick@yorickpeterse.com>"]
edition = "2021"
license = "MPL-2.0"
build = "build.rs"
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
ast = { workspace = true }
types = { workspace = true }
location = { workspace = true }
unicode-width = { workspace = true }
fnv = { workspace = true }
blake3 = { workspace = true }
inkwell = { workspace = true, features = ["llvm17-0"] }
llvm-sys-170 = { package = "llvm-sys", version = "^170.2", features = ["prefer-static"] }
indexmap = { workspace = true }
crossbeam-queue = { workspace = true }

[dev-dependencies]
similar-asserts = { workspace = true }
