[package]
name = "compiler"
version.workspace = true
authors = ["Yorick Peterse <yorick@yorickpeterse.com>"]
edition = "2021"
license = "MPL-2.0"
build = "build.rs"
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
ast = { path = "../ast" }
types = { path = "../types" }
location = { path = "../location" }
unicode-width = "^0.2"
fnv = "^1.0"
blake3 = "^1.8"
inkwell = { version = "^0.8", features = ["llvm18-1", "llvm18-1-prefer-static"] }
indexmap = "^2.6"

[dev-dependencies]
similar-asserts = "^1.1"
