[tool.poetry]
name = "docs-lib"
version = "1.0.0"
description = ""
authors = ["Yorick Peterse <yorick@yorickpeterse.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.1"
mkdocs-material = "^6.0"
pygments-inko-lexer = { path = "./plugins/pygments-inko-lexer/" }

# pyinotify is used so `mkdocs serve` doesn't need to poll for changes, reducing
# CPU usage.
pyinotify = "^0.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
