[package]
name = "inko"
version.workspace = true
authors = ["Yorick Peterse <yorick@yorickpeterse.com>"]
edition = "2021"
license = "MPL-2.0"

[dependencies]
getopts = "^0.2"
compiler = { path = "../compiler" }
types = { path = "../types" }
ureq = { version = "^2.9", default-features = false, features = ["tls"] }
flate2 = "^1.0"
tar = { version = "^0.4", default-features = false }
