[package]
name = "inko"
version.workspace = true
authors = ["Yorick Peterse <yorick@yorickpeterse.com>"]
edition = "2021"
license = "MPL-2.0"
rust-version.workspace = true

[dependencies]
getopts = { workspace = true }
compiler = { workspace = true }
types = { workspace = true }
ureq = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
blake3 = { workspace = true }
