[package]
name = "inko"
version.workspace = true
authors = ["Yorick Peterse <yorick@yorickpeterse.com>"]
edition = "2024"
license = "MPL-2.0"
rust-version.workspace = true

[dependencies]
getopts = "^0.2"
compiler = { path = "../compiler" }
types = { path = "../types" }
ureq = { version = "^3.3", features = ["gzip", "rustls-no-provider", "platform-verifier"], default-features = false }
rustls-graviola = "^0.2"
flate2 = "^1.0"
tar = { version = "^0.4", default-features = false }
blake3 = "^1.8"
