[package]
name = "rt"
version.workspace = true
authors = ["Yorick Peterse <yorick@yorickpeterse.com>"]
edition = "2021"
build = "build.rs"
license = "MPL-2.0"
rust-version.workspace = true

[lib]
name = "inko"
doctest = false
crate-type = ["staticlib", "lib"]

[dependencies]
crossbeam-utils = { workspace = true }
crossbeam-queue = { workspace = true }

# We use rustix where possible, but as it doesn't offer support for everything
# (e.g. signal management) we still need to use libc in those cases.
libc = { workspace = true }
rand = { workspace = true, features = ["default", "small_rng"] }
unicode-segmentation = { workspace = true }
backtrace = { workspace = true }
rustix = { workspace = true, features = ["mm", "param", "process", "std", "event"] }

# The dependencies needed for TLS support.
#
# We use ring instead of the default aws-lc-sys because:
#
# 1. aws-lc-sys requires cmake to be installed when building on FreeBSD (and
#    potentially other platforms), as aws-lc-sys only provides generated
#    bindings for a limited set of platforms
# 2. aws-lc-sys increases compile times quite a bit
# 3. We don't care about FIPS compliance at the time of writing
rustls = { workspace = true, features = ["ring", "tls12", "std"] }
rustls-pemfile = { workspace = true }

# These dependencies are used by the customized version of
# rustls-platform-modifier. We include a custom version so we can deal with the
# platform verification process being potentially slow. See
# https://github.com/rustls/rustls/issues/850 and
# https://github.com/inko-lang/inko/issues/329 for more details.
once_cell = { workspace = true }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
rustls-native-certs = "0.7"
webpki = { package = "rustls-webpki", version = "0.102", default-features = false }

[target.'cfg(any(target_os = "macos"))'.dependencies]
core-foundation = "0.9"
core-foundation-sys = "0.8"
security-framework = { version = "2.10", features = ["OSX_10_14"] }
security-framework-sys = { version = "2.10", features = ["OSX_10_14"] }
