[package]
name = "rt"
version.workspace = true
authors = ["Yorick Peterse <yorick@yorickpeterse.com>"]
edition = "2021"
build = "build.rs"
license = "MPL-2.0"
rust-version.workspace = true

[lib]
name = "inko"
doctest = false
crate-type = ["staticlib", "lib"]

[dependencies]
crossbeam-utils = "^0.8"
atomic-wait = "^1.1"
libz-rs-sys = { version = "^0.5", features = ["c-allocator", "export-symbols"], default-features = false }
libc = "^0.2"
unicode-segmentation = "^1.10"
backtrace = "^0.3"

# The dependencies needed for TLS support.
#
# We use graviola instead of ring or aws-lc-sys because:
#
# 1. aws-lc-sys requires cmake to be installed when building on FreeBSD (and
#    potentially other platforms), as aws-lc-sys only provides generated
#    bindings for a limited set of platforms
# 2. aws-lc-sys increases compile times quite a bit
# 3. cross-compiling aws-lc-sys is difficult depending on the target platform
# 4. We don't care about FIPS compliance at the time of writing
# 5. ring's maintenance is spotty/uncertain in the future
#   (https://github.com/briansmith/ring/discussions/2414)
rustls = { version = "^0.23", features = ["tls12", "std"], default-features = false }
rustls-graviola = "^0.2"

# ------------------------------------------------------------------------------
#
# These dependencies are used by the customized version of
# rustls-platform-modifier. We include a custom version so we can deal with the
# platform verification process being potentially slow. See
# https://github.com/rustls/rustls/issues/850 and
# https://github.com/inko-lang/inko/issues/329 for more details.
log = { version = "0.4" }

[target.'cfg(all(unix, not(target_os = "android"), not(target_vendor = "apple"), not(target_arch = "wasm32")))'.dependencies]
rustls-native-certs = "0.8"
webpki = { package = "rustls-webpki", version = "0.103", default-features = false }

[target.'cfg(any(target_vendor = "apple"))'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
security-framework = { version = "3", features = ["OSX_10_14"] }
security-framework-sys = { version = "2.10", features = ["OSX_10_14"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = ">=0.52.0, <0.60.0", default-features = false, features = ["Win32_Foundation", "Win32_Security_Cryptography"] }
