[package]
name = "vm"
version = "0.10.0" # VERSION
authors = ["Yorick Peterse <yorick@yorickpeterse.com>"]
edition = "2021"
build = "build.rs"
license = "MPL-2.0"

[lib]
doctest = false

[features]
libffi-system = ["libffi/system"]

[dependencies]
num_cpus = "^1.13"
dirs-next = "^1.0"
libloading = "^0.7"
libffi = "^3.0"
crossbeam-utils = "^0.8"
crossbeam-queue = "^0.3"
libc = "^0.2"
ahash = "^0.8"
rand = { version = "^0.8", features = ["default", "small_rng"] }
polling = "^2.0"
unicode-segmentation = "^1.8"
bytecode = { path = "../bytecode" }

[dependencies.socket2]
version = "^0.4"
features = ["all"]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "^0.36"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_Time",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
]
